[project]
name = "dev-assistant"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=1.0.1",
    "pydantic-ai-slim[openai]>=1.0.1",
    "typer>=0.17.4",
]

[project.scripts]
dev-assistant = "dev_assistant.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dev_assistant*"]
exclude = ["logs*"]
